Error in the routes

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,9 @@ two:
   name: MyString
   string: MyString
   email: MyString
+
+
+vitalii:
+  name: Vitalii
+  email: sample@ukr.net
+  password_digest: <%= User.digest('AAaa11@@') %>
