--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,4 +12,28 @@ vitalii:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('Pas$w0rd') %>
+  admin: true
 
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('Pas$w0rd') %>
+
+ana:
+  name: Lana Kane
+  email: hands@example.gov
+  password_digest: <%= User.digest('Pas$w0rd') %>
+
+mallory:
+  name: Mallory Arche
+  email: boss@example.gov
+  password_digest: <%= User.digest('Pas$w0rd') %>
+
+
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('Pas$w0rd') %>
+<% end %>
