--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/VitaliiShevchenko/SampleApp.git"
-  },
-  "author": "",
+  "repository": "git+https://github.com/VitaliiShevchenko/SampleApp.git",
+  "author": "Vitalii <iksel@ukr.net>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/VitaliiShevchenko/SampleApp/issues"
