--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/VitaliiShevchenko/SampleApp#readme",
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "jquery": "^3.6.3"
+    "jquery": "^3.6.3",
+    "@rails/ujs": "7.0.4"
   }
 }
