--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/VitaliiShevchenko/SampleApp#readme",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@rails/ujs": "7.0.4",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
