--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "set NODE_ENV=production && node app.js"
   },
   "repository": "git+https://github.com/VitaliiShevchenko/SampleApp.git",
   "author": "Vitalii <iksel@ukr.net>",
