--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set NODE_ENV=production && node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "git+https://github.com/VitaliiShevchenko/SampleApp.git",
   "author": "Vitalii <iksel@ukr.net>",
@@ -22,7 +21,6 @@
     "@popperjs/core": "^2.11.6",
     "@rails/ujs": "7.0.4",
     "bootstrap": "^5.2.3",
-    "jquery": "^3.6.3",
-    "popper": "^1.0.1"
+    "jquery": "^3.6.3"
   }
 }
